# wanted

./: .gitignore  Dockerfile  README.md  bootstrap.sh  company_tag_sample.json  docker-compose.yml  pyproject.toml  전처리.ipynb
src/: containers.py  main.py
src/apps/: __init__.py
src/apps/companies/: dto.py  model.py  router.py
src/apps/companies/repository/: company_repository.py  company_tag_repository.py  tag_repository.py
src/apps/companies/service/: company_service.py  tag_service.py
src/apps/search/: dto.py  model.py  router.py  service.py
src/apps/search/repository/: keyword_company_repository.py  keyword_tag_repository.py
src/config/: __init__.py  base.env  docker.env  test.env
src/core/: date.py  db.py  dependency.py  exception.py  repository.py
tests/: conftest.py  test_senior_app.py
